# langgraph-agents-monorepo

./: .gitignore  Makefile  README.md  azure.yaml
.github/: copilot-instructions.md
agents/researcher-agent/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
agents/researcher-agent/app/: main.py
agents/researcher-agent/app/core/: __init__.py  config.py  exceptions.py  llm.py  logging.py  telemetry.py
agents/researcher-agent/app/core/exceptions/: __init__.py  app_exceptions.py
agents/researcher-agent/app/core/logging/: __init__.py  logger.py
agents/researcher-agent/app/core/middleware/: __init__.py  correlation.py
agents/researcher-agent/app/core/observability/: __init__.py  telemetry.py
agents/researcher-agent/app/core/utils/: __init__.py  config.py
agents/researcher-agent/app/domain/repo/: web_search_repo.py
agents/researcher-agent/app/domain/routes/: health.py  research.py
agents/researcher-agent/app/domain/schemas/: research.py
agents/researcher-agent/app/domain/services/: research_enrichment.py  research_service.py
agents/researcher-agent/app/langgraph/: graph.py  state.py
agents/researcher-agent/app/langgraph/evals/: run_evals.py
agents/researcher-agent/app/langgraph/nodes/: researcher.py  reviewer.py  web_search.py  writer.py
agents/researcher-agent/app/langgraph/prompts/: __init__.py  researcher.py  reviewer.py  writer.py
agents/researcher-agent/app/langgraph/tools/: web_search.py
agents/researcher-agent/docs/design/: prd.md  projectstructure.md  techstack.md  userflow.md
agents/researcher-agent/tests/: test_flow.py  test_health.py  test_research.py  test_smoke_live.py
docs/agents/: README.md
infra/: main.bicep  main.bicepparam  main.json
infra/hooks/: postprovision.sh  predeploy.sh  preprovision.sh
infra/modules/: aca-env.bicep  acr.bicep  app-insights.bicep  container-app.bicep  foundry-models.bicep  foundry-project.bicep  foundry-resource.bicep  key-vault-secrets.bicep  key-vault.bicep  log-analytics.bicep  managed-identity.bicep  rbac.bicep
