[project]
name = "researcher-agent"
version = "0.1.0"
description = "LangGraph Researcher Agent"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "langgraph>=1.0.7",
  "langchain>=1.2.7",
  "ddgs>=9.0.0",
  "azure-identity>=1.25.1",
  "langchain-openai>=1.1.7",
  "langchain-azure-ai>=1.0.4",
  "azure-monitor-opentelemetry>=1.8.5",
  "opentelemetry-sdk==1.39.0",
  "opentelemetry-instrumentation-fastapi==0.60b0",
  "opentelemetry-instrumentation-requests==0.60b0",
  "opentelemetry-instrumentation-logging==0.60b0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
dev = ["ruff>=0.5.0", "black>=24.4.0", "isort>=5.13.2", "pre-commit>=4.5.0"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
